fixed all form lable spacing, post game now removes all db event listeners

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,8 @@ a {
 
 label {
   display: block;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 
 nav {
